plugins {
  id 'java'
  id 'org.springframework.boot' version '3.5.3'
  id 'io.spring.dependency-management' version '1.1.7'
}

group = 'region'
version = '0.0.1-SNAPSHOT'

java {
  toolchain {
    languageVersion = JavaLanguageVersion.of(17)
  }
}

configurations {
  compileOnly {
    extendsFrom annotationProcessor
  }
}

repositories {
  mavenCentral()
}

dependencies {
  implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
  implementation 'org.springframework.boot:spring-boot-starter-validation'
  implementation 'org.springframework.boot:spring-boot-starter-web'
  implementation 'org.springframework.boot:spring-boot-starter-mail'
  implementation 'org.springframework.retry:spring-retry'
  implementation 'org.springframework.boot:spring-boot-starter-aop'

  //Security
  implementation 'org.springframework.boot:spring-boot-starter-security'

  // DB
  implementation 'com.h2database:h2'
  implementation 'org.postgresql:postgresql'
  runtimeOnly 'com.h2database:h2'
  runtimeOnly 'org.postgresql:postgresql'
  implementation 'io.hypersistence:hypersistence-utils-hibernate-60:3.2.0'

  // Test
  testImplementation 'org.springframework.boot:spring-boot-starter-test'
  testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

  // Lombok
  compileOnly 'org.projectlombok:lombok'
  annotationProcessor 'org.projectlombok:lombok'

  // Api Doc
  implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.4'

  // Mapstruct
  implementation 'org.mapstruct:mapstruct:1.6.3'
  annotationProcessor 'org.mapstruct:mapstruct-processor:1.6.3'

  // Lombok, Mapstruct 연동(mapsturct 빌드 시 lombok과 충돌 이슈 해결)
  implementation 'org.projectlombok:lombok-mapstruct-binding:0.2.0'
  annotationProcessor 'org.projectlombok:lombok-mapstruct-binding:0.2.0'

  // QueryDSL
  implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
  annotationProcessor "com.querydsl:querydsl-apt:5.0.0:jakarta"
  annotationProcessor "jakarta.annotation:jakarta.annotation-api"
  annotationProcessor "jakarta.persistence:jakarta.persistence-api"

  // Jwt
  implementation 'com.nimbusds:nimbus-jose-jwt:10.3'

  // S3
  implementation 'software.amazon.awssdk:s3:2.31.7'

  //json
  implementation 'io.hypersistence:hypersistence-utils-hibernate-63:3.8.3'
}

tasks.named('test') {
  useJUnitPlatform()
}
